--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div id="controls">
+      <span id="p1-score" class="score">0</span>
       <button id="play">Play</button>
+      <span id="p2-score" class="score">0</span>
     </div>
     <div id="table">
       <div id="p1" class="paddle"></div>
